--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,9 @@ serde_json = "1"
 reqwest = { version = "0.11", features = ["blocking"] }
 tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
 teloxide = { version = "0.12", features = ["macros"] }
+
+spl-token = "4.0"
 mpl-token-metadata = "4.1.2"
+solana-program = "1"
+solana-sdk = "1.18"
+solana-client = "1.18"
